# build_to_learn_template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml
.cursor/rules/: project-context.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build-publish.yml  dependabot-automerge.yml  pr-checks.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  LOCAL_SERVER.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/02-quality-extensibility/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-VERIFICATION.md
backend/: requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/application/: __init__.py
backend/app/application/dto/: __init__.py  item_dto.py
backend/app/application/ports/: __init__.py  item_repository.py
backend/app/application/use_cases/: __init__.py
backend/app/application/use_cases/items/: __init__.py  create_item.py  list_items.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  item.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/http/: __init__.py  error_handlers.py
backend/app/infrastructure/http/controllers/: __init__.py  item_controller.py
backend/app/infrastructure/http/routes/: __init__.py  health.py  items.py
backend/app/infrastructure/persistence/sqlite/: __init__.py  item_repository.py  schema.py
backend/app/routes/: example.py  health.py
backend/migrations/: 001_initial.sql  README.md
backend/tests/: conftest.py  test_example.py  test_health.py
backend/tests/integration/http/: __init__.py  test_error_handlers.py  test_health.py  test_items.py
backend/tests/unit/application/: fakes.py
backend/tests/unit/application/use_cases/: test_create_item.py  test_list_items.py
backend/tests/unit/domain/entities/: test_item.py
backend/tests/unit/infrastructure/persistence/: __init__.py  test_sqlite_item_repository.py
scripts/: check_no_env_committed.py
scripts/js/: sum.js  sum.test.js
