[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

# ---------------------------------------------------------------------------
# Black — Python formatter (source of truth for style)
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py311"]
exclude = "(.venv|venv|__pycache__|.git)"

# ---------------------------------------------------------------------------
# isort — import sorter (must match Black)
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
src_paths = ["backend"]

# ---------------------------------------------------------------------------
# Ruff — fast linter (replaces Flake8; formatting rules disabled to avoid
# conflict with Black; E/W/F/I are kept, formatter rules E1/W1/C9 disabled)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "S",   # flake8-bandit (basic security)
  "N",   # pep8-naming
]
# Disable formatting-overlap rules — Black owns these
ignore = [
  "E501",  # line-length (Black handles)
  "W503",  # line break before binary operator (Black compatible)
  "S101",  # use of assert (needed in tests)
]
per-file-ignores = { "backend/tests/**/*.py" = ["S", "N802"] }

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false   # Flask decorators are untyped
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["backend/app"]

[[tool.mypy.overrides]]
module = ["flask.*", "werkzeug.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
