[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = "(.venv|venv|__pycache__|.git)"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
src_paths = ["backend"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C4", "UP", "S", "N"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["S", "N802"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["backend/app"]

[[tool.mypy.overrides]]
module = ["flask.*", "werkzeug.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
